[gd_scene load_steps=11 format=2]

[ext_resource path="res://Nodes/Ui/HighlightLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Ui/Indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=3]
[ext_resource path="res://Graphics/UI/Inventory/characters/key.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Ui/Inventory/InventorySelect.gd" type="Script" id=5]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox_inside.png" type="Texture" id=6]
[ext_resource path="res://Graphics/UI/Inventory/character-bar.png" type="Texture" id=8]
[ext_resource path="res://Nodes/Ui/Inventory/portrait.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 0.0
content_margin_right = 0.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 24, 24 )
margin_left = 6.0
margin_right = 6.0
margin_top = 5.0
margin_bottom = 6.0
expand_margin_left = 8.0
expand_margin_right = 7.0
expand_margin_top = 3.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.729412, 0.32549, 0.894118, 1 )

[node name="InventorySelect" type="NinePatchRect"]
material = ExtResource( 3 )
margin_left = 31.0
margin_right = 286.0
margin_bottom = 26.0
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 27
patch_margin_right = 75
script = ExtResource( 5 )
noKey = true

[node name="CenterContainer" type="PanelContainer" parent="."]
material = ExtResource( 3 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_top = 3.0
margin_right = -7.0
margin_bottom = 26.0
grow_horizontal = 0
custom_styles/panel = SubResource( 2 )

[node name="MenuName" parent="CenterContainer" instance=ExtResource( 1 )]
margin_left = 5.0
margin_top = 5.0
margin_right = 55.0
margin_bottom = 17.0
grow_horizontal = 2
size_flags_horizontal = 4
custom_styles/normal = SubResource( 1 )
text = "Menu Name"
align = 1

[node name="CharacterPortraits" type="HBoxContainer" parent="."]
margin_left = 6.0
margin_right = 182.0
margin_bottom = 27.0
custom_constants/separation = 0

[node name="IndicatorL" parent="CharacterPortraits" instance=ExtResource( 2 )]
margin_bottom = 27.0
grow_horizontal = 0
key = "ui_focus_prev"

[node name="Ninten" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_right = 22.0
rect_min_size = Vector2( 22, 21 )

[node name="Ana" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 22.0
margin_right = 44.0
rect_min_size = Vector2( 22, 21 )

[node name="Lloyd" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 44.0
margin_right = 66.0
rect_min_size = Vector2( 22, 21 )

[node name="Teddy" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 66.0
margin_right = 88.0
rect_min_size = Vector2( 22, 21 )

[node name="Pippi" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 88.0
margin_right = 110.0
rect_min_size = Vector2( 22, 21 )

[node name="FlyingMan" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 110.0
margin_right = 132.0
rect_min_size = Vector2( 22, 21 )

[node name="Eve" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 132.0
margin_right = 154.0
rect_min_size = Vector2( 22, 21 )

[node name="CanaryChick" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 154.0
margin_right = 176.0
rect_min_size = Vector2( 22, 21 )

[node name="Key" type="TextureRect" parent="CharacterPortraits"]
visible = false
show_behind_parent = true
material = ExtResource( 3 )
margin_left = 154.0
margin_right = 175.0
margin_bottom = 27.0
rect_min_size = Vector2( 22, 21 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Storage" type="TextureRect" parent="CharacterPortraits"]
visible = false
show_behind_parent = true
material = ExtResource( 3 )
margin_left = 154.0
margin_right = 175.0
margin_bottom = 27.0
rect_min_size = Vector2( 22, 21 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="IndicatorR" parent="CharacterPortraits" instance=ExtResource( 2 )]
margin_left = 176.0
margin_right = 176.0
margin_bottom = 27.0
grow_horizontal = 1
